--- a/_posts/2019-12-28-the-us-narrative-today.html
+++ b/_posts/2019-12-28-the-us-narrative-today.html
@@ -1581,107 +1581,107 @@ stories:
   domain: http://www.lyndentrib.com/
   link: http://lyndentrib.com/zabiegi-na-cellulit-wojkowice/
 images:
-- name: birdhouse-birdhouse-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-yellow-paper.jpg
-- name: locked-up-steam-lock-up-steam-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-crabapple.jpg
-- name: windowmountain-window-mountain-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-post-modern.jpg
-- name: copper-circuit-white-house-press-room-flag.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-white-house-press-room-flag.jpg
-- name: server-cloud-server-racks-clouds-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-light-dali.jpg
-- name: supreme-court-supremecourt-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colored-circuits.jpg
-- name: mediterranean-mediterranean-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-creativity.jpg
-- name: gypsymosaic-gypsy-eyes-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-light-dali.jpg
-- name: window-window-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dark-rain.jpg
-- name: lincoln-memorial-lincolnmemorial-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-mucha-mult.jpg
-- name: nazi-invasion-screaming-face-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-screaming-face-statue.jpg
-- name: bf-skinner-hollywood-sign-with-tower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hollywood-sign-with-tower.jpg
-- name: old-barn-old-barn-1500-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-matrix.jpg
-- name: flower-barbed-wire-flower-barbed-wire-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-clean-view.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-attack-planes.jpg
-- name: old-door-lock-old-door-lock-2-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-yellow-collage.jpg
-- name: mediterranean-mediterranean-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-atari-missle.jpg
-- name: oldtrain-oldtrain-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-purple-pond.jpg
-- name: capital-battle-capitolbattle-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-circuit.jpg
-- name: containership-containership-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-clean-view.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-brush.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-yellow-paper.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-yellow-paper.png
-- name: catacombs-catacombs-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-crafty-painting.jpg
-- name: mosaic-face-mosaic-face-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dali-two.jpg
-- name: beach-clouds-lifeguard-beachclouds-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-bright-sand.jpg
-- name: mistywoods-babyfoot-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-circuit.jpg
-- name: mosaic-face-mosaic-face-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dali-three.jpg
-- name: stalin-time-times-square-up-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-times-square-up-road.jpg
-- name: oldhouse-granaryfield-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-smoking-cigarette.jpg
-- name: oldhouse-oldhouse-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dark-rain.jpg
+- name: bf-skinner-butterfly-on-flower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-butterfly-on-flower.jpg
+- name: containership-containership-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-copper-circuit-2.jpg
+- name: ellis-island-ellisisland-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dali-two.jpg
 - name: razorwire-DSC-0080-blue-circuit.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-blue-circuit.jpg
-- name: old-building-clouds-with-tree-uncle-sam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-building-clouds-with-tree-uncle-sam.jpg
-- name: aws-s3-stories-castle-on-hill-edinburgh-copper-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-on-hill-edinburgh-copper-circuit.JPG
-- name: stalin-time-san-francisco-skyline-smoke.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-san-francisco-skyline-smoke.jpg
-- name: gears-4882162452-fa3126b38d-b-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-bright-sand.jpg
-- name: stories-new-68-174-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-68-174-800-500-0-max-0--5--1.jpg
-- name: eduardo-eduardo-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-smooth-ride.jpg
-- name: white-house-lawn-white-house-window-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colorful-blocks.jpg
-- name: border-crossing-bordercrossing-yellow-collage.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-yellow-collage.png
-- name: dragon-desert-desert-dragon-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-horiz-circuit.jpg
-- name: oldcabin-oldcabin-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-blue-brush.jpg
-- name: old-granary-field-oldhouse-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dali-three.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit.jpg
-- name: white-house-whitehouse-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-nazi-poster.jpg
-- name: nazi-invasion-washington-monument-afar.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-washington-monument-afar.jpg
-- name: white-house-whitehouse-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-purple-pond.jpg
-- name: server-cloud-server-racks-clouds-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-electricity.jpg
-- name: aws-s3-square-raven-fence-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-raven-fence-square.jpg
-- name: window-window-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-wols.jpg
-- name: hollywood-building-hollywood-building-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-spagetti-accident.jpg
-- name: oldsmallboat-oldsmallboat-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-purple-pond.jpg
+- name: braceros-domingo-ulloa-building-shadows-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-building-shadows-sun.jpg
+- name: christianity-christianity-under-construction-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dry-skin.jpg
+- name: oldroad-old-road-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-rainbow-festival.jpg
+- name: stories-new-power-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-power-colorful-blocks.jpg
+- name: bf-skinner-shipping-container-yard-police-boat.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-shipping-container-yard-police-boat.jpg
+- name: carry-load-carryload-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-cinnamon-rolls.jpg
+- name: old-door-lock-old-door-lock-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2.jpg
+- name: stalin-time-statue-supreme-court.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-supreme-court.jpg
+- name: death-valley-death-valley-national-park-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-electricity.jpg
+- name: rockingchair-face-2-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-colorful-dream.jpg
+- name: supreme-court-supremecourt-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crafty-painting.jpg
+- name: catacombs-catacombs-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-gan-vogh.jpg
+- name: liberty-back-statue-liberty-back-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-crabapple.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-purple-storm.jpg
+- name: border-crossing-bordercrossing-dali-two.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dali-two.png
+- name: power-lines-power-lines-empty-space-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-china-prop.jpg
+- name: braceros-domingo-ulloa-seattle-shipping-people-walking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-seattle-shipping-people-walking.jpg
+- name: downtown-trucksilo-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-light-dali.jpg
+- name: oldtrain-oldtrain-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-really-hot.jpg
+- name: windowmountain-window-mountain-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-smoking-cigarette.jpg
+- name: school-clouds-church-clouds-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-gred-mash.jpg
+- name: old-house-oldhouse-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-colorful-blocks.jpg
+- name: downtown-los-angeles-downtown-la-space-pizza.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-space-pizza.JPG
+- name: blossombar-neo-instinct-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-neo-instinct-file-00-00-50-62.jpg
+- name: server-cloud-server-racks-door-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-umberto-bocc.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-gan-vogh.jpg
+- name: berlinwall2-berlinwall-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-electricity.jpg
+- name: store-on-corner-store-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-kandinsky-bv.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dark-dali.jpg
+- name: docks-docks-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-plentiful.jpg
+- name: nazi-invasion-close-to-all-remote-aircraft.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-close-to-all-remote-aircraft.jpg
+- name: white-house-lawn-white-house-lawn-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-monet-one.jpg
+- name: walled-garden-walled-garden-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-sand-paper.jpg
+- name: amusement-park-amusement-park-2-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-blocks.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor.jpg
+- name: store-on-corner-store-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-green-zuma.jpg
+- name: castle-wall-DSC-0067-blue-circuit-5.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit-5.JPG
+- name: status-berlin-status-berlin-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-matrix.jpg
+- name: berlinwall2-berlinwall-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-deep-connections.jpg
+- name: server-cloud-server-racks-clouds-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-copper-circuit-2.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-creativity.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-green-zuma.jpg
+- name: ellis-island-ellisisland-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-purp-paper.jpg
+- name: containership-containership-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-nazi-poster.jpg
+- name: status-berlin-status-berlin-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dark-soul.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-marcel-duchamp.jpg
+- name: old-door-lock-old-door-lock-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-graham-sutherland.jpg
 ---
 Officials Warn Revelers To Throw Away Trees Safely.&nbsp;Boys In The Band Tribute Concert Raises Funds For Local Causes.&nbsp;Sterling Butch Myers.&nbsp;Blue Devils Coast Past Bombers.&nbsp;Walter Toler Reveals Combat Experiences During Korean War.&nbsp;Lady Trojans Cross Country Team Runs To Programs 15th State Championship.&nbsp;Emma Watson Compares Taylor Swift To Little Women's Jo March.&nbsp;Hong Kong Protesters Demand Mainland Chinese Traders Leave.&nbsp;
